--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
       "src": "index.js",
       "use": "@vercel/node"
     }
+  ],
+  "redirects": [
+    { "source": "/", "destination": "public/index.html", "permanent": true }
   ]
 }
