--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "gh-pinned-repo",
   "version": "1.0.0",
   "description": "A Node server to provide the pinned repositories of your GitHub account!",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "bun run index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,8 +18,16 @@
   "author": "Yash Suhagiya <yash@patentassist.ai>",
   "license": "ISC",
   "dependencies": {
+    "bun-vercel": "^1.0.0-alpha.5",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
+    "hono": "^4.5.11",
     "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
