--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A Node server to provide the pinned repositories of your GitHub account!",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "dev": "bun run index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,9 +21,7 @@
   "dependencies": {
     "bun-vercel": "^1.0.0-alpha.5",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2",
-    "hono": "^4.5.11",
-    "nodemon": "^3.0.2"
+    "hono": "^4.5.11"
   },
   "devDependencies": {
     "@types/bun": "latest"
