--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "A Node server to provide the pinned repositories of your GitHub account!",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "dev": "bun run index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
