--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "gh-pinned-repo",
   "version": "1.0.0",
   "description": "A Node server to provide the pinned repositories of your GitHub account!",
-  "main": "index.ts",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "bun run index.ts",
-    "build": "tsc",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,14 +18,8 @@
   "author": "Yash Suhagiya <yash@patentassist.ai>",
   "license": "ISC",
   "dependencies": {
-    "bun-vercel": "^1.0.0-alpha.5",
     "cheerio": "^1.0.0-rc.12",
-    "hono": "^4.5.11"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2"
   }
 }
