--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,19 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./index.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "./public/**",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
-    }
-  ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "./index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "./public/**",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ]
+  }
